<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".DetailsFragment">

    <ImageView
        android:id="@+id/details_image"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:scaleType="centerCrop"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        app:srcCompat="@drawable/ic_logo"
        tools:srcCompat="@drawable/ic_logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_regualer"
        android:text="@string/quiz_title"
        android:textColor="@color/LightOrange"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_image" />

    <TextView
        android:id="@+id/details_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/lato_light"
        android:text="@string/quiz_description"
        android:textColor="@color/White"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_title"
        app:lineHeight="28dp" />

    <TextView
        android:id="@+id/details_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/lato_regualer"
        android:text="@string/difficulty"
        android:textColor="@color/Gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_desc" />

    <TextView
        android:id="@+id/details_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/lato_regualer"
        android:textColor="@color/Gray"
        android:textSize="16sp"
        android:text="@string/total_questions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_difficulty" />

    <TextView
        android:id="@+id/details_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/lato_regualer"
        android:textColor="@color/Gray"
        android:textSize="16sp"
        android:text="@string/your_last_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_questions" />

    <TextView
        android:id="@+id/details_difficulty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/lato_regualer"
        android:text="@string/na"
        android:textColor="@color/Gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_difficulty" />

    <TextView
        android:id="@+id/details_questions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/lato_regualer"
        android:text="@string/na"
        android:textColor="@color/Gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_difficulty_text" />

    <TextView
        android:id="@+id/details_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/lato_regualer"
        android:text="@string/na"
        android:textColor="@color/Gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_questions_text" />

    <Button
        android:id="@+id/details_start_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/custom_one_shape_button"
        android:fontFamily="@font/lato_regualer"
        android:text="@string/start_quiz"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02872777" />

</androidx.constraintlayout.widget.ConstraintLayout>