<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".QuizeFragment">

    <ImageButton
        android:id="@+id/quiz_close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:src="@drawable/ic_round_cancel_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"
        app:tint="@color/Orange" />

    <TextView
        android:id="@+id/quiz_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/outo"
        android:text="@string/loading_quiz"
        android:textAlignment="center"
        android:textColor="@color/LightOrange"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_close_btn" />

    <TextView
        android:id="@+id/quiz_question_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_light"
        android:text="@string/question"
        android:textColor="@color/Gray"
        app:layout_constraintEnd_toEndOf="@+id/quiz_close_btn"
        app:layout_constraintStart_toStartOf="@+id/quiz_title"
        app:layout_constraintTop_toBottomOf="@+id/quiz_title" />

    <TextView
        android:id="@+id/quiz_question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_light"
        android:text="@string/_0"
        android:textColor="@color/Gray"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/quiz_question_number_title"
        app:layout_constraintStart_toStartOf="@+id/quiz_question_number_title"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question_number_title" />

    <ProgressBar
        android:id="@+id/quiz_question_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:progress="100"
        android:progressDrawable="@drawable/circular_progress"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_question_number"
        app:layout_constraintEnd_toEndOf="@+id/quiz_title"
        app:layout_constraintStart_toStartOf="@+id/quiz_close_btn"
        app:layout_constraintTop_toBottomOf="@+id/quiz_title" />

    <TextView
        android:id="@+id/quiz_question_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_light"
        android:text="@string/_10"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_question_progress"
        app:layout_constraintEnd_toEndOf="@+id/quiz_question_progress"
        app:layout_constraintStart_toStartOf="@+id/quiz_question_progress"
        app:layout_constraintTop_toTopOf="@+id/quiz_question_progress" />

    <TextView
        android:id="@+id/quiz_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/lato_regualer"
        android:text="@string/fetching_data"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question_number" />

    <Button
        android:id="@+id/quiz_option_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/delete_button_shape"
        android:fontFamily="@font/lato_regualer"
        android:padding="12dp"
        android:text="@string/option_button"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question" />

    <Button
        android:id="@+id/quiz_option_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/outline_btn_bg"
        android:fontFamily="@font/lato_regualer"
        android:padding="12dp"
        android:text="@string/option_button"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option_one" />

    <Button
        android:id="@+id/quiz_option_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/delete_button_shape"
        android:fontFamily="@font/lato_regualer"
        android:padding="12dp"
        android:text="@string/option_button"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option_two" />

    <TextView
        android:id="@+id/quiz_question_feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/lato_regualer"
        android:text="@string/verifying_answer"
        android:textAlignment="center"
        android:textColor="@color/Gray"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option_three" />

    <Button
        android:id="@+id/quiz_next_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_dark_shape"
        android:fontFamily="@font/lato_regualer"
        android:text="@string/next_question"
        android:textAllCaps="false"
        android:textColor="@color/Gray"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>